SERVER-59108 Resolve race with transaction operation not killed after stepdown